[package]
name = "pollnet"
version = "1.1.0"
authors = ["probable-basilisk <basilisk@mtknn.com>"]
edition = "2021"

[dependencies]
tokio-tungstenite = {version = "0.20", features = ["rustls"]}
tungstenite = {version = "0.20", features = ["rustls"]}
slotmap = "1.0"
futures = "0.3"
futures-util = "0.3"
url = "2"
hyper = {version = "1", features = ["server"]}
hyper-util = {version = "0.1", features = ["full"]}
http-body-util = "0.1"
http = "0.2"
nanoid = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls"] }
log = "0.4"
anyhow = "^1.0.70"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "net", "fs", "rt-multi-thread", "io-util"]

[dependencies.env_logger]
version = "^0.10.0"
default-features = false
features = ["humantime", "color", "auto-color"]

[lib]
name = "pollnet"
crate-type = ["cdylib"]
